1、切换到JDK8 2、屏蔽Rabbit部分代码 3、修改下载文件参数

--- a/FileService/pom.xml
+++ b/FileService/pom.xml
@@ -22,6 +22,7 @@
 	<!--log4j版本号-->
     <slf4j.v>1.6.6</slf4j.v>
     <log4j.v>1.2.17</log4j.v>	
+    <java.version>1.8</java.version>
   </properties>
   
   
