--- a/FileService/pom.xml
+++ b/FileService/pom.xml
@@ -30,7 +30,7 @@
     <dependency>
       <groupId>junit</groupId>
       <artifactId>junit</artifactId>
-      <version>3.8.1</version>
+      <version>4.12</version>
       <scope>test</scope>
     </dependency>
 	
@@ -180,6 +180,12 @@
         <groupId>org.slf4j</groupId>
         <artifactId>slf4j-api</artifactId>
         <version>${slf4j.v}</version>
+    </dependency>
+    
+    <dependency>
+    <groupId>com.qiniu</groupId>
+    <artifactId>qiniu-java-sdk</artifactId>
+    <version>[7.0.0, 7.0.99]</version>
     </dependency>
     <!-- log end -->	
 	
