--- a/FileService/src/main/resources/conf/jdbc.properties
+++ b/FileService/src/main/resources/conf/jdbc.properties
@@ -1,4 +1,4 @@
 db.driver=com.mysql.jdbc.Driver
-db.url=jdbc:mysql://192.168.73.143:3306/wjdbcenter?useUnicode=true&amp;characterEncoding=UTF-8
-db.user=root
-db.password=root..admin
+db.url=jdbc:mysql://wjdbcenter:3306/wjdbcenter?useUnicode=true&amp;characterEncoding=UTF-8
+db.user=mysql
+db.password=mysql
