增加七牛图片处理功能，下载图图片例子为：http://localhost:8080/FileService/downloadstorefile?fileid=327&imageView2=/1/w/200/h/200

--- a/FileService/src/main/resources/conf/jdbc.properties
+++ b/FileService/src/main/resources/conf/jdbc.properties
@@ -1,4 +1,4 @@
 db.driver=com.mysql.jdbc.Driver
 db.url=jdbc:mysql://wjdbcenter:3306/wjdbcenter?useUnicode=true&amp;characterEncoding=UTF-8
-db.user=mysql
-db.password=mysql
+db.user=wj
+db.password=wj123!@#
